--- a/WeeklyScheduler/MainWindow.xaml
+++ b/WeeklyScheduler/MainWindow.xaml
@@ -6,7 +6,39 @@
         xmlns:local="clr-namespace:WeeklyScheduler"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+
+
+    <!-- Weekly Schedule -->
+    <DockPanel>
+
+        <Menu DockPanel.Dock="Top" Margin="0 0 0 30">
+            <MenuItem Header="File">
+                <MenuItem x:Name="AddEmployeeBtn" Header="Add Employee"></MenuItem>
+                <MenuItem x:Name="DeleteEmployeeBtn" Header="Delete Employee"></MenuItem>
+            </MenuItem>
+        </Menu>
+
+
+        <!-- Button Controls for Weekly Layout -->
+        <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Margin="10 10">
+            <Button x:Name="LastWeekBtn" Content="&#8592;"></Button>
+            <Button x:Name="TodayBtn" Content="Today"></Button>
+            <Button x:Name="NextWeekBtn" Content="&#8594;"></Button>
+            <TextBlock x:Name="CurrentWeekTB" Margin="50 0 200 0">Week:</TextBlock>
+            <Button  Content="Print"></Button>
+        </StackPanel>
+
+        <DataGrid x:Name="ScheduleDG" DockPanel.Dock="Bottom" AutoGenerateColumns="False" CanUserAddRows="True" CanUserReorderColumns="False" Margin="10 10">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Staff"></DataGridTextColumn>
+                <DataGridTextColumn Header="Sun" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Mon" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Tue" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Wed" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Thurs" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Fri" Width="*"></DataGridTextColumn>
+                <DataGridTextColumn Header="Sat" Width="*"></DataGridTextColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+    </DockPanel>
 </Window>
