--- a/WeeklyScheduler/MainWindow.xaml
+++ b/WeeklyScheduler/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WeeklyScheduler.MainWindow"
+﻿<Window x:Name="MainWindow1" x:Class="WeeklyScheduler.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WeeklyScheduler"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525" Loaded="OnWindowLoad">
 
 
     <!-- Weekly Schedule -->
@@ -13,7 +13,7 @@
 
         <Menu DockPanel.Dock="Top" Margin="0 0 0 30">
             <MenuItem Header="File">
-                <MenuItem x:Name="AddEmployeeBtn" Header="Add Employee"></MenuItem>
+                <MenuItem x:Name="AddEmployeeBtn" Header="Add Employee" Click="AddNewEmployee"></MenuItem>
                 <MenuItem x:Name="DeleteEmployeeBtn" Header="Delete Employee"></MenuItem>
             </MenuItem>
         </Menu>
@@ -25,12 +25,14 @@
             <Button x:Name="TodayBtn" Content="Today"></Button>
             <Button x:Name="NextWeekBtn" Content="&#8594;"></Button>
             <TextBlock x:Name="CurrentWeekTB" Margin="50 0 200 0">Week:</TextBlock>
-            <Button  Content="Print"></Button>
+            <Button x:Name="PrintBtn"  Content="Print" Click="PrintSchedule"></Button>
         </StackPanel>
+        
+        
 
-        <DataGrid x:Name="ScheduleDG" DockPanel.Dock="Bottom" AutoGenerateColumns="False" CanUserAddRows="True" CanUserReorderColumns="False" Margin="10 10">
+        <DataGrid x:Name="ScheduleDG" ItemsSource="{Binding EmpList}"  DockPanel.Dock="Bottom" AutoGenerateColumns="false" CanUserAddRows="False" CanUserReorderColumns="False" Margin="10 10">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Staff"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Name, Mode=OneWay}" Header="Staff"></DataGridTextColumn>
                 <DataGridTextColumn Header="Sun" Width="*"></DataGridTextColumn>
                 <DataGridTextColumn Header="Mon" Width="*"></DataGridTextColumn>
                 <DataGridTextColumn Header="Tue" Width="*"></DataGridTextColumn>
