--- a/WeeklyScheduler/Dialog/DayScheduleDialog.xaml
+++ b/WeeklyScheduler/Dialog/DayScheduleDialog.xaml
@@ -6,14 +6,15 @@
         xmlns:local="clr-namespace:WeeklyScheduler.Dialog"
         mc:Ignorable="d"
         Title="DayScheduleDialog" Height="300" Width="300"
-        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" SizeToContent="WidthAndHeight">
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" SizeToContent="WidthAndHeight" ContentRendered="DayScheduleDialog_ContentRendered">
     <Border Padding="10">
         <StackPanel>
             <StackPanel Orientation="Horizontal">
-                <TextBox MinWidth="100" x:Name="StartTime"/>
+                <TextBox MinWidth="100" x:Name="StartTime" Text="{Binding StartTime, Mode=TwoWay}"/>
                 <TextBlock Text=" To "/>
-                <TextBox MinWidth="100" x:Name="EndTime"/>
+                <TextBox MinWidth="100" x:Name="EndTime" Text="{Binding EndTime, Mode=TwoWay}"/>
             </StackPanel>
+            
             <Grid Margin="0 5 0 0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
@@ -21,7 +22,7 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Column="1" x:Name="Submit" Margin="5" Content="Submit" IsDefault="True"/>
+                <Button Grid.Column="1" x:Name="Submit" Margin="5" Content="Submit" IsDefault="True" Click="SubmitButton_Click"/>
                 <Button Grid.Column="2" x:Name="Cancel" Margin="5" Content="Cancel" IsCancel="True"/>
             </Grid>
         </StackPanel>
