--- a/WeeklyScheduler/MainWindow.xaml
+++ b/WeeklyScheduler/MainWindow.xaml
@@ -25,30 +25,41 @@
 
 
         <!-- Button Controls for Weekly Layout -->
-        <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Margin="10 10">
+        <Grid DockPanel.Dock="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
             <Button x:Name="LastWeekBtn" Content="&#8592;" Click="MoveBackOneWeek_click"></Button>
-            <Button x:Name="TodayBtn" Content="Today" Click="MoveToCurrentWeek_click"></Button>
-            <Button x:Name="NextWeekBtn" Content="&#8594;" Click="MoveForwardOneWeek_click"></Button>
-            <TextBlock Text="{Binding Path=Sunday, StringFormat=ddd M/d}" x:Name="CurrentWeekTB" Margin="50 0 200 0"></TextBlock>
-            <Button x:Name="PrintBtn"  Content="Print" Click="PrintSchedule"></Button>
-        </StackPanel>
+            <Button Grid.Column="1" x:Name="TodayBtn" Content="Today" Click="MoveToCurrentWeek_click"></Button>
+            <Button Grid.Column="2" x:Name="NextWeekBtn" Content="&#8594;" Click="MoveForwardOneWeek_click"></Button>
+            <TextBlock HorizontalAlignment="Right" Grid.Column="3" Text="Week of: "/>
+            <TextBlock Grid.Column="4" Text="{Binding Path=WeekOfDate, StringFormat=ddd M/d}" x:Name="CurrentWeekTB" />
+            <Button Grid.Column="5" x:Name="PrintBtn"  Content="Print" Click="PrintSchedule"></Button>
+        </Grid>
+
 
 
 
         <!-- using testEmp right now to populate with dummy data -->
-        <DataGrid x:Name="ScheduleDG" ItemsSource="{Binding testEmp}"  DockPanel.Dock="Bottom" 
-                  AutoGenerateColumns="false" CanUserAddRows="False" CanUserReorderColumns="False" 
+        <DataGrid x:Name="ScheduleDG" ItemsSource="{Binding EmployeeSchedules}"  DockPanel.Dock="Bottom" 
+                  AutoGenerateColumns="False" CanUserAddRows="False" CanUserReorderColumns="False" 
                   Margin="10 10" CanUserSortColumns="False" MouseLeftButtonUp="DataGrid_MouseLeftButtonUp">
             <!-- Custom class for getting around datagrid datacontext inheritance. -->
             <!--<DataGrid.Resources>
                 <local:BindingProxy x:Key="proxy" Data="{Binding}" />
             </DataGrid.Resources>-->
-            
+
             <DataGrid.Columns>
                 <DataGridTextColumn IsReadOnly="True" Binding="{Binding employee.Name}" Width="*" Header="Staff"></DataGridTextColumn>
 
                 <!--How to bind using relative source to mainwindow-->
-                
+
                 <!-- Sunday Header -->
                 <DataGridTextColumn Binding="{Binding days[0], Mode=OneWay}" Width="*">
                     <DataGridTextColumn.HeaderTemplate>
@@ -123,7 +134,7 @@
                         </DataTemplate>
                     </DataGridTextColumn.HeaderTemplate>
                 </DataGridTextColumn>
-               
+
             </DataGrid.Columns>
         </DataGrid>
     </DockPanel>
