--- a/WeeklyScheduler/MainWindow.xaml
+++ b/WeeklyScheduler/MainWindow.xaml
@@ -38,8 +38,8 @@
             <Button x:Name="LastWeekBtn" Content="&#8592;" Click="MoveBackOneWeek_click"></Button>
             <Button Grid.Column="1" x:Name="TodayBtn" Content="Today" Click="MoveToCurrentWeek_click"></Button>
             <Button Grid.Column="2" x:Name="NextWeekBtn" Content="&#8594;" Click="MoveForwardOneWeek_click"></Button>
-            <TextBlock HorizontalAlignment="Right" Grid.Column="3" Text="Week of: "/>
-            <TextBlock Grid.Column="4" Text="{Binding Path=WeekOfDate, StringFormat=ddd M/d}" x:Name="CurrentWeekTB" />
+            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="3" Text="Week of: "/>
+            <TextBlock VerticalAlignment="Center" Grid.Column="4" Text="{Binding Path=WeekOfDate, StringFormat=ddd M/d}" x:Name="CurrentWeekTB" />
             <Button Grid.Column="5" x:Name="PrintBtn"  Content="Print" Click="PrintSchedule"></Button>
         </Grid>
 
@@ -64,7 +64,7 @@
                 <DataGridTextColumn Binding="{Binding days[0], Mode=OneWay}" Width="*">
                     <DataGridTextColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding DataContext.WeekDates[0],
+                            <TextBlock Text="{Binding DataContext.WeekDates[0], StringFormat=ddd M/d,
                                 RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}}}"/>
                         </DataTemplate>
                     </DataGridTextColumn.HeaderTemplate>
@@ -74,7 +74,7 @@
                 <DataGridTextColumn Width="*" Binding="{Binding days[1], Mode=OneWay}">
                     <DataGridTextColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding DataContext.WeekDates[1],
+                            <TextBlock Text="{Binding DataContext.WeekDates[1], StringFormat=ddd M/d,
                                 RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}}}"/>
                         </DataTemplate>
                     </DataGridTextColumn.HeaderTemplate>
@@ -85,7 +85,7 @@
                 <DataGridTextColumn Width="*" Binding="{Binding days[2], Mode=OneWay}">
                     <DataGridTextColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding DataContext.WeekDates[2],
+                            <TextBlock Text="{Binding DataContext.WeekDates[2], StringFormat=ddd M/d,
                                 RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}}}"/>
                         </DataTemplate>
                     </DataGridTextColumn.HeaderTemplate>
@@ -96,7 +96,7 @@
                 <DataGridTextColumn Width="*" Binding="{Binding days[3], Mode=OneWay}">
                     <DataGridTextColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding DataContext.WeekDates[3],
+                            <TextBlock Text="{Binding DataContext.WeekDates[3], StringFormat=ddd M/d,
                                 RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}}}"/>
                         </DataTemplate>
                     </DataGridTextColumn.HeaderTemplate>
@@ -107,7 +107,7 @@
                 <DataGridTextColumn Width="*" Binding="{Binding days[4], Mode=OneWay}">
                     <DataGridTextColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding DataContext.WeekDates[4],
+                            <TextBlock Text="{Binding DataContext.WeekDates[4], StringFormat=ddd M/d,
                                 RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}}}"/>
                         </DataTemplate>
                     </DataGridTextColumn.HeaderTemplate>
@@ -118,7 +118,7 @@
                 <DataGridTextColumn Width="*" Binding="{Binding days[5], Mode=OneWay}">
                     <DataGridTextColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding DataContext.WeekDates[5],
+                            <TextBlock Text="{Binding DataContext.WeekDates[5], StringFormat=ddd M/d,
                                 RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}}}"/>
                         </DataTemplate>
                     </DataGridTextColumn.HeaderTemplate>
@@ -129,7 +129,7 @@
                 <DataGridTextColumn Width="*" Binding="{Binding days[6], Mode=OneWay}">
                     <DataGridTextColumn.HeaderTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding DataContext.WeekDates[6],
+                            <TextBlock Text="{Binding DataContext.WeekDates[6], StringFormat=ddd M/d,
                                 RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}}}"/>
                         </DataTemplate>
                     </DataGridTextColumn.HeaderTemplate>
